<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>787</width>
    <height>430</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>787</width>
    <height>430</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>787</width>
    <height>430</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>AddUser</string>
  </property>
  <property name="windowIcon">
   <iconset resource="picture.qrc">
    <normaloff>:/travelsystem/success</normaloff>:/travelsystem/success</iconset>
  </property>
  <property name="styleSheet">
   <string notr="true">background:rgb(255, 255, 255)</string>
  </property>
  <widget class="QLineEdit" name="NameEdit">
   <property name="geometry">
    <rect>
     <x>177</x>
     <y>30</y>
     <width>211</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border:1px solid gray;
border-radius:5px;
</string>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>30</y>
     <width>77</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color:rgb(97, 99, 101);
font: 9pt &quot;Arial&quot;;
</string>
   </property>
   <property name="text">
    <string>Name:</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>71</y>
     <width>69</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color:rgb(97, 99, 101);
font: 9pt &quot;Arial&quot;;
</string>
   </property>
   <property name="text">
    <string>From:</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_4">
   <property name="geometry">
    <rect>
     <x>425</x>
     <y>71</y>
     <width>39</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color:rgb(97, 99, 101);
font: 9pt &quot;Arial&quot;;
</string>
   </property>
   <property name="text">
    <string>To:</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_5">
   <property name="geometry">
    <rect>
     <x>424</x>
     <y>30</y>
     <width>108</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color:rgb(97, 99, 101);
font: 9pt &quot;Arial&quot;;
</string>
   </property>
   <property name="text">
    <string>Plan:</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="fromeEdit">
   <property name="geometry">
    <rect>
     <x>177</x>
     <y>71</y>
     <width>211</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border:1px solid gray;
border-radius:5px;
</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLineEdit" name="toEdit">
   <property name="geometry">
    <rect>
     <x>560</x>
     <y>71</y>
     <width>181</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border:1px solid gray;
border-radius:5px;
</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLineEdit" name="strategyEdit">
   <property name="geometry">
    <rect>
     <x>560</x>
     <y>30</y>
     <width>181</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border:1px solid gray;
border-radius:5px;
</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_7">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>112</y>
     <width>136</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color:rgb(97, 99, 101);
font: 9pt &quot;Arial&quot;;
</string>
   </property>
   <property name="text">
    <string>Time limited:</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_8">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>157</y>
     <width>161</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color:rgb(97, 99, 101);
font: 9pt &quot;Arial&quot;;
</string>
   </property>
   <property name="text">
    <string>Pass-by citys:</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="tlEdit">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>112</y>
     <width>171</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border:1px solid gray;
border-radius:5px;
</string>
   </property>
  </widget>
  <widget class="QTextEdit" name="textEdit">
   <property name="geometry">
    <rect>
     <x>38</x>
     <y>199</y>
     <width>701</width>
     <height>91</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border:1px solid gray;
border-radius:5px;
</string>
   </property>
   <property name="html">
    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
p, li { white-space: pre-wrap; }
&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'SimSun'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
   </property>
  </widget>
  <widget class="QPushButton" name="confirm">
   <property name="geometry">
    <rect>
     <x>301</x>
     <y>330</y>
     <width>162</width>
     <height>76</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background:rgb(255, 255, 255);
color:rgb(62, 175, 236);
font: 10pt &quot;Consolas&quot;;
border:2px  ;
border-color:rgb(24, 186, 210);
border-radius:30px;
padding:2px 4px;</string>
   </property>
   <property name="text">
    <string>Confirm</string>
   </property>
  </widget>
  <widget class="QWidget" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>-30</x>
     <y>307</y>
     <width>821</width>
     <height>1</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background:rgb(135, 139, 141)</string>
   </property>
  </widget>
  <widget class="QLabel" name="confirmBg">
   <property name="geometry">
    <rect>
     <x>299</x>
     <y>328</y>
     <width>166</width>
     <height>80</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background:rgb(57, 154, 221);
border-radius:33px;
padding:2px 4px;</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <zorder>NameEdit</zorder>
  <zorder>label</zorder>
  <zorder>label_2</zorder>
  <zorder>label_4</zorder>
  <zorder>label_5</zorder>
  <zorder>fromeEdit</zorder>
  <zorder>toEdit</zorder>
  <zorder>strategyEdit</zorder>
  <zorder>label_7</zorder>
  <zorder>label_8</zorder>
  <zorder>tlEdit</zorder>
  <zorder>textEdit</zorder>
  <zorder>widget</zorder>
  <zorder>confirmBg</zorder>
  <zorder>confirm</zorder>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <tabstops>
  <tabstop>NameEdit</tabstop>
  <tabstop>strategyEdit</tabstop>
  <tabstop>fromeEdit</tabstop>
  <tabstop>toEdit</tabstop>
  <tabstop>tlEdit</tabstop>
  <tabstop>textEdit</tabstop>
  <tabstop>confirm</tabstop>
 </tabstops>
 <resources>
  <include location="picture.qrc"/>
 </resources>
 <connections/>
</ui>
